services/ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  name: services-metllb
  namespace: ingress
  annotations:
    # metallb.universe.tf/loadBalancerIPs: 192.168.31.11
    # metallb.universe.tf/allow-shared-ip: "homeassist-shared-ip"
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  # loadBalancerIP is optional. MetalLB will automatically allocate an IP
  # from its pool if not specified. You can also specify one manually.
  loadBalancerIP: 192.168.31.15
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - auth.local.digitalpoet.info
      secretName: tls-local.digitalpoet.info
  rules:
    - host: auth.local.digitalpoet.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 443
